# mono2micro

./: .env  .gitignore  README.md  UserInterface.py  controller_classes_dict_ldod.txt  docker-compose.yml  start.sh
ZZZ/: GraphConstructor_2.py  ParserJavaCallgraph.py  controller_classes_dict_blended.txt
backend/: .gitignore  Dockerfile  pom.xml
codebases/CNG/: codebase.json  datafile.json  translation.json
collectors/: .gitignore
collectors/code2vec-callgraph/: README.md  pom.xml
collectors/commit-collection/: execution_time_graph.R  pyproject.toml  readme.md  requirements.txt  run_thesis_tasks.py
collectors/commit-collection/collector/: commit_log_script.sh  history.py  log.awk  repository.py  service.py
collectors/commit-collection/collector/legacy/: commitsplit.py  functionalitysplit.py  subtrace.py
collectors/commit-collection/helpers/: constants.py  metadata.py  static_files_fix.py
collectors/commit-collection/metrics/: complexity.py  complexity_coupling_cohesion.py  pandascomplexity.py  repeated_clusters_check.py  splitcheck.py  tsr.py
collectors/commit-collection/mono2micro/: interface.py
collectors/commit-collection/resources/: counts.csv  statistics.csv
collectors/dynamic-collection/: aop.xml
collectors/eclipse-plugin-callgraph/: README.md
collectors/java-callgraph/: README.md
evaluation-playground/: Pipfile
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
plugin/: plugin.xml
scripts/: Dockerfile  README.md  analyser.py  createDendrogram.py  env.py  main.py  plot.py  requirements.txt
tools/: README.md
(+2277 files in other folders)
